refactor: rename tags Sat, 12 March 19:57

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -16,20 +16,36 @@
     <div class="wrapper">
       <h1 class="header">CSS Bayan</h1>
       <hr />
-      <ul>
-        <li>You can't just copy and past CSS</li>
+      <div class="item">
+        <input id="item-1" name="i-1" type="checkbox" checked />
+        <label for="item-1">You can't just copy and past CSS</label>
+        <div class="item-img"></div>
         <hr />
-        <li>Keep calm and carry on</li>
+      </div>
+      <div class="item">
+        <input id="item-2" name="i-2" type="checkbox" checked />
+        <label for="item-2">Keep calm and carry on</label>
+        <div class="item-img"></div>
         <hr />
-        <li>Work-life balance</li>
+      </div>
+      <div class="item">
+        <input id="item-3" name="i-3" type="checkbox" checked />
+        <label for="item-3">Work-life balance</label>
+        <div class="item-img"></div>
         <hr />
-        <li class="active">
-          <p>Dude, where is JS?</p>
-          <img src="images/images.png" alt="css" />
-        </li>
+      </div>
+      <div class="item active">
+        <input id="item-4" name="i-4" type="checkbox" checked />
+        <label for="item-4">Dude, where is JS?</label>
+        <div class="item-img"></div>
         <hr />
-        <li>Relax and take it easy</li>
-      </ul>
+      </div>
+      <div class="item">
+        <input id="item-2" name="i-2" type="checkbox" checked />
+        <label for="item-2">Relax and take it easy</label>
+        <div class="item-img"></div>
+        <hr />
+      </div>
     </div>
   </body>
 </html>
