feat: add images 12 Mar 2023, Sun 21:43

--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -16,34 +16,44 @@
     <div class="wrapper">
       <h1 class="header">CSS Bayan</h1>
       <hr />
-      <div class="item">
+      <div class="acc">
         <input id="item-1" name="i-1" type="checkbox" checked />
         <label for="item-1">You can't just copy and past CSS</label>
-        <div class="item-img"></div>
+        <div class="item">
+          <div class="item-img-1"></div>
+        </div>
         <hr />
       </div>
-      <div class="item">
+      <div class="acc">
         <input id="item-2" name="i-2" type="checkbox" checked />
         <label for="item-2">Keep calm and carry on</label>
-        <div class="item-img"></div>
+        <div class="item">
+          <div class="item-img-2"></div>
+        </div>
         <hr />
       </div>
-      <div class="item">
+      <div class="acc">
         <input id="item-3" name="i-3" type="checkbox" checked />
         <label for="item-3">Work-life balance</label>
-        <div class="item-img"></div>
+        <div class="item">
+          <div class="item-img-3"></div>
+        </div>
         <hr />
       </div>
-      <div class="item active">
+      <div class="acc">
         <input id="item-4" name="i-4" type="checkbox" checked />
         <label for="item-4">Dude, where is JS?</label>
-        <div class="item-img"></div>
+        <div class="item">
+          <div class="item-img-4"></div>
+        </div>
         <hr />
       </div>
-      <div class="item">
-        <input id="item-2" name="i-2" type="checkbox" checked />
-        <label for="item-2">Relax and take it easy</label>
-        <div class="item-img"></div>
+      <div class="acc">
+        <input id="item-5" name="i-5" type="checkbox" checked />
+        <label for="item-5">Relax and take it easy</label>
+        <div class="item">
+          <div class="item-img-5"></div>
+        </div>
         <hr />
       </div>
     </div>
