--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -6,10 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
-    <script
-      src="https://kit.fontawesome.com/cbd8c068d3.js"
-      crossorigin="anonymous"
-    ></script>
     <title>CSS Bayan</title>
   </head>
   <body>
@@ -17,7 +13,7 @@
       <h1 class="header">CSS Bayan</h1>
       <hr />
       <div class="acc">
-        <input id="item-1" name="i-1" type="checkbox" checked />
+        <input id="item-1" name="i-1" type="checkbox" />
         <label for="item-1">You can't just copy and past CSS</label>
         <div class="item">
           <div class="item-img-1"></div>
@@ -25,7 +21,7 @@
         <hr />
       </div>
       <div class="acc">
-        <input id="item-2" name="i-2" type="checkbox" checked />
+        <input id="item-2" name="i-2" type="checkbox" />
         <label for="item-2">Keep calm and carry on</label>
         <div class="item">
           <div class="item-img-2"></div>
@@ -33,7 +29,7 @@
         <hr />
       </div>
       <div class="acc">
-        <input id="item-3" name="i-3" type="checkbox" checked />
+        <input id="item-3" name="i-3" type="checkbox" />
         <label for="item-3">Work-life balance</label>
         <div class="item">
           <div class="item-img-3"></div>
@@ -49,7 +45,7 @@
         <hr />
       </div>
       <div class="acc">
-        <input id="item-5" name="i-5" type="checkbox" checked />
+        <input id="item-5" name="i-5" type="checkbox" />
         <label for="item-5">Relax and take it easy</label>
         <div class="item">
           <div class="item-img-5"></div>
