--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/cbd8c068d3.js"
+      crossorigin="anonymous"
+    ></script>
     <title>CSS Bayan</title>
   </head>
   <body>
@@ -13,7 +17,7 @@
       <h1 class="header">CSS Bayan</h1>
       <hr />
       <div class="acc">
-        <input id="item-1" name="i-1" type="checkbox" />
+        <input id="item-1" name="i-1" type="checkbox" checked />
         <label for="item-1">You can't just copy and past CSS</label>
         <div class="item">
           <div class="item-img-1"></div>
@@ -37,7 +41,7 @@
         <hr />
       </div>
       <div class="acc">
-        <input id="item-4" name="i-4" type="checkbox" checked />
+        <input id="item-4" name="i-4" type="checkbox" />
         <label for="item-4">Dude, where is JS?</label>
         <div class="item">
           <div class="item-img-4"></div>
